[workspace]
members = [
    "libs/async_impl",
    "libs/mempool",
    "libs/naive",
    "libs/sync",
    "stress_tester",
]
resolver = "2"


[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = "4.5"
criterion = "0.6"
crossbeam = "0.8"
futures = "0.3"
hdrhistogram = "7"
num-format = "0.4"
rand = "0.9"
reqwest = "0.12"
serde = "1"
strum = "0.27"
tokio = "1.45"
uuid = "1.16"

[profile.release]
debug = true
