[package]
edition = "2024"
name = "async_impl"
version = "0.1.0"

[dependencies]
mempool = { path = "./../mempool" }

anyhow = { workspace = true }
async-trait = { workspace = true }
hdrhistogram = { workspace = true }
num-format = { workspace = true, features = ["with-system-locale"] }
rand = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }

[dev-dependencies]
criterion = { workspace = true }
